bk_ida/gccida/c1/emit_single_push_insn
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_single_push_insn/src/expr.c:3629:30: error: must use 'enum' tag to refer to type 'machine_mode'
void  emit_single_push_insn( machine_mode mode, rtx x, tree type) 
                             ^
                             enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_single_push_insn/src/expr.c:3635:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v9; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_single_push_insn/src/expr.c:3667:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)( ( ( target_flags & 0x2000000 | 0x500000000uLL) - 1) >> 32), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_single_push_insn/src/expr.c:3684:13: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
predicate = insn_data_0[( _QWORD)insn_code].operand->predicate; 
            ^~~~~~~~~~~
            insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_single_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_single_push_insn/src/expr.c:3694:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
v14 = insn_data_0[v12].genfun( x, insn_code); 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_single_push_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_single_push_insn/src/expr.c:3694:30: error: called object type '<dependent type>' is not a function or function pointer
v14 = insn_data_0[v12].genfun( x, insn_code); 
                             ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/emit_single_push_insn/src/obj/expr.o] Error 1
